Example Website Created

--- a/index.html
+++ b/index.html
@@ -1,1 +1,36 @@
-<h1>Hello<h1>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>KTP Coding Classes</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
+    </head>
+    <body>
+        <header>
+            <h1>KTP Coding Support</h1>
+        </header>
+        <nav>
+            <a href="">
+                <button type="button" class="navigationButton">Home</button>
+            </a>
+            <a href="">
+                <button type="button" class="navigationButton">Resources</button>
+            </a>
+            <a href="">
+                <button type="button" class="navigationButton">Class Sign-Up</button>
+            </a>
+            <a href="">
+                <button type="button" class="navigationButton">Tutoring</button>
+            </a>
+            <a href="">
+                <button type="button" class="navigationButton">About Us</button>
+            </a>
+        </nav>
+        <section>
+            <p>Here is a basic example of what basic HTML with CSS looks like, only took 10 min to make example so shouldn't be to hard to make prettier.</p>
+        </section>
+        <section>
+            <p>I'm currently working on a way to have multiple pages of this site that don't require seperate GitHub projects each.</p>
+        </section>
+    </body>
+</html>
