Multiple Page Testing

--- a/resources.html
+++ b/resources.html
@@ -13,7 +13,7 @@
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
                 <button type="button" class="navigationButton">Home</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/">
                 <button type="button" class="navigationButton">Resources</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
@@ -29,12 +29,9 @@
 
         <!-- ANYTHING PAST THIS POINT IS ONLY USED ON THIS PAGE -->
 
-        <h1>Home</h1>
-        <article>
-            <p>Here is a basic example of what basic HTML with CSS looks like, only took 10 min to make example so shouldn't be to hard to make prettier.</p>
-        </article>
-        <article>
-            <p>I'm currently working on a way to have multiple pages of this site that don't require seperate GitHub projects each.</p>
-        </article>
+        <h1>Resources</h1>
+        <section>
+            <p>This is a test</p>
+        </section>
     </body>
 </html>
