Added Remaining Pages

--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
                 <button type="button" class="navigationButton">Resources</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
                 <button type="button" class="navigationButton">Class Sign-Up</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
                 <button type="button" class="navigationButton">Tutoring</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
                 <button type="button" class="navigationButton">About Us</button>
             </a>
         </nav>
 
         <!-- ANYTHING PAST THIS POINT IS ONLY USED ON THIS PAGE -->
 
-        <h1>Home</h1>
+        <h1 class="pageTitle">Home</h1>
         <article>
             <p>Here is a basic example of what basic HTML with CSS looks like, only took 10 min to make example so shouldn't be to hard to make prettier.</p>
         </article>
