--- a/resources.html
+++ b/resources.html
@@ -29,7 +29,7 @@
 
         <!-- ANYTHING PAST THIS POINT IS ONLY USED ON THIS PAGE -->
 
-        <h1>Resources</h1>
+        <h1 class="pageTitle">Resources</h1>
         <section>
             <p>This is a test</p>
         </section>
