--- a/tutoring.html
+++ b/tutoring.html
@@ -1,1 +1,35 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Coding Classes</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
+    </head>
+    <body>
+        <header>
+            <h1>Coding Support</h1>
+        </header>
+        <nav>
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+                <button type="button" class="navigationButton">Home</button>
+            </a>
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
+                <button type="button" class="navigationButton">Resources</button>
+            </a>
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
+                <button type="button" class="navigationButton">Class Sign-Up</button>
+            </a>
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
+                <button type="button" class="navigationButton">Tutoring</button>
+            </a>
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
+                <button type="button" class="navigationButton">About Us</button>
+            </a>
+        </nav>
 
+        <!-- ANYTHING PAST THIS POINT IS ONLY USED ON THIS PAGE -->
+
+        <h1 class="pageTitle">Tutoring</h1>
+
+    </body>
+</html>
