Fixed Links on Resources Page

--- a/resources.html
+++ b/resources.html
@@ -13,16 +13,16 @@
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
                 <button type="button" class="navigationButton">Home</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
                 <button type="button" class="navigationButton">Resources</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
                 <button type="button" class="navigationButton">Class Sign-Up</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
                 <button type="button" class="navigationButton">Tutoring</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
+            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
                 <button type="button" class="navigationButton">About Us</button>
             </a>
         </nav>
