--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
             <h1>Coding Support</h1>
