--- a/index.html
+++ b/index.html
@@ -32,10 +32,14 @@
 
         <h1 class="pageTitle">Home</h1>
         <article>
-            <p>Here is a basic example of what basic HTML with CSS looks like, only took 10 min to make example so shouldn't be to hard to make prettier.</p>
+            <p>I've created the base of this website so that we don't need to do any set-up in the future.</p>
+            <br>
         </article>
         <article>
-            <p>I'm currently working on a way to have multiple pages of this site that don't require seperate GitHub projects each.</p>
+            <p>Needed Roles:</p>
+            <p>- Assistant Programmer</p>
+            <p>- Page Designer</p>
+            <p>- Content Writer</p>
         </article>
     </body>
 </html>
