Updated Header and Page Title

--- a/tutoring.html
+++ b/tutoring.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Coding Classes</title>
+        <title>KΘΠ-Nu Coding Support</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1>Coding Support</h1>
+            <h1>KΘΠ-Nu Coding Support</h1>
         </header>
         <nav>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
@@ -28,7 +28,7 @@
             </a>
         </nav>
 
-        <!-- ANYTHING PAST THIS POINT IS ONLY USED ON THIS PAGE -->
+        <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
         <h1 class="pageTitle">Tutoring</h1>
 
