Updated Home Page

--- a/about_us.html
+++ b/about_us.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KΘΠ-Nu Coding Support</title>
+        <title>About Us</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1>KΘΠ-Nu Coding Support</h1>
+            <h1>KΘΠ-Nu Coding Camps</h1>
         </header>
         <nav>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
