--- a/index.html
+++ b/index.html
@@ -1,45 +1,52 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>KΘΠ-Nu Coding Support</title>
+        <title>KΘΠ-Nu Coding Camps</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1>KΘΠ-Nu Coding Support</h1>
+            <h1 id="fratName" class="mainTitle">KΘΠ</h1>
         </header>
+        <p class="codingCampLabel">-------- Coding Camps --------</p>
         <nav>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
-                <button type="button" class="navigationButton">Home</button>
+                <button type="button" class="leftButton">Home</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
-                <button type="button" class="navigationButton">Resources</button>
+                <button type="button" class="middleButton">Resources</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
-                <button type="button" class="navigationButton">Class Sign-Up</button>
+                <button type="button" class="middleButton">Class Sign-Up</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
-                <button type="button" class="navigationButton">Tutoring</button>
+                <button type="button" class="middleButton">Tutoring</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
-                <button type="button" class="navigationButton">About Us</button>
+                <button type="button" class="rightButton">About Us</button>
             </a>
         </nav>
 
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
-        <h1 class="pageTitle">Home</h1>
-        <article>
-            <p>I've created the base of this website so that we don't need to do any set-up in the future.</p>
-            <br>
-        </article>
-        <article>
-            <p>Needed Roles:</p>
-            <p>- Assistant Programmer</p>
-            <p>- Page Designer</p>
-            <p>- Content Writer</p>
-        </article>
+
+        <h1 class="pageTitle">Home:</h1>
+
+        <h2 class="sectionTitle">What are the Camps?:</h2>
+        <br>
+        <h2 class="sectionTitle">Why Learn to Code?:</h2>
+        <br>
+        <br>
+
+
+        <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
+
+        <div class="aboutUs">
+            <h1>About Us:</h1>
+            <p>test</p>
+            <h1>test</h1>
+        </div>
     </body>
 </html>
