Completed Home Page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1 id="fratName" class="mainTitle">KΘΠ</h1>
+            <h1 class="fratName mainTitle">KΘΠ-Nu</h1>
         </header>
         <p class="codingCampLabel">-------- Coding Camps --------</p>
         <nav>
@@ -22,11 +22,9 @@
                 <button type="button" class="middleButton">Class Sign-Up</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
-                <button type="button" class="middleButton">Tutoring</button>
+                <button type="button" class="rightButton">Tutoring</button>
             </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
-                <button type="button" class="rightButton">About Us</button>
-            </a>
+            
         </nav>
 
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
@@ -35,9 +33,34 @@
         <h1 class="pageTitle">Home:</h1>
 
         <h2 class="sectionTitle">What are the Camps?:</h2>
-        <br>
+        <p class="bodyText">The KTP Coding Camp is a fun and short program designed to help CU students strengthen their coding skills and collaborate on real-world projects. Students can engage in hands-on workshops, learning new programming techniques and problem-solving strategies while building connections with peers passionate about tech. This camp is a great opportunity for both beginners and advanced coders to grow and develop in a supportive environment!</p>
+
         <h2 class="sectionTitle">Why Learn to Code?:</h2>
-        <br>
+        <p class="bodyText">Learning to code unlocks a world of possibilities. It boosts your problem-solving skills, opens doors to exciting careers, and empowers you to create amazing things – from websites to games and beyond. So why not give it a shot?</p>
+        
+        <h2 class="sectionTitle">Languages Taught & Their Uses:</h2>
+        <p class="bodyText centeredText">
+            <b>R:</b>
+            <br>- Statistics: Data analysis and modeling
+            <br>- Data visualization: Graphs and plots
+            <br>- Bioinformatics: Genomic data analysis
+            <br>
+            <br><b>Python:</b>
+            <br>- Data science: Analysis and ML
+            <br>- Web development: Back-end frameworks
+            <br>- Automation: Scripting and task automation
+            <br>
+            <br><b>Java:</b>
+            <br>- Web applications: Server-side applications
+            <br>- Android development: Mobile apps
+            <br>- Enterprise software: Large-scale business apps
+            <br>
+            <br><b>C++:</b>
+            <br>- System software: OS and browsers
+            <br>- Game development: High-performance games
+            <br>- Embedded systems: IoT, automotive
+            <br>
+        </p>
         <br>
 
 
@@ -45,8 +68,8 @@
 
         <div class="aboutUs">
             <h1>About Us:</h1>
-            <p>test</p>
-            <h1>test</h1>
+            <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
+            <br>
         </div>
     </body>
 </html>
