Completed Class Sign-Up Page

--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
                 <button type="button" class="rightButton">Tutoring</button>
-            </a>
-            
+            </a>  
         </nav>
 
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
@@ -39,7 +38,7 @@
         <p class="bodyText">Learning to code unlocks a world of possibilities. It boosts your problem-solving skills, opens doors to exciting careers, and empowers you to create amazing things – from websites to games and beyond. So why not give it a shot?</p>
         
         <h2 class="sectionTitle">Languages Taught & Their Uses:</h2>
-        <p class="bodyText centeredText">
+        <p class="centeredText">
             <b>R:</b>
             <br>- Statistics: Data analysis and modeling
             <br>- Data visualization: Graphs and plots
