--- a/tutoring.html
+++ b/tutoring.html
@@ -1,30 +1,28 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Tutoring</title>
+        <title>KΘΠ-Nu Coding Camps</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1>KΘΠ-Nu Coding Camps</h1>
+            <h1 class="fratName mainTitle">KΘΠ-Nu</h1>
         </header>
+        <p class="codingCampLabel">-------- Coding Camps --------</p>
         <nav>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
-                <button type="button" class="navigationButton">Home</button>
+                <button type="button" class="leftButton">Home</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
-                <button type="button" class="navigationButton">Resources</button>
+                <button type="button" class="middleButton">Resources</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
-                <button type="button" class="navigationButton">Class Sign-Up</button>
+                <button type="button" class="middleButton">Class Sign-Up</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
-                <button type="button" class="navigationButton">Tutoring</button>
-            </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
-                <button type="button" class="navigationButton">About Us</button>
+                <button type="button" class="rightButton">Tutoring</button>
             </a>
         </nav>
 
@@ -32,5 +30,12 @@
 
         <h1 class="pageTitle">Tutoring</h1>
 
+        <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
+
+        <div class="aboutUs">
+            <h1>About Us:</h1>
+            <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
+            <br>
+        </div>
     </body>
 </html>
