--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -1,36 +1,54 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Class Sign-Up</title>
+        <title>KΘΠ-Nu Coding Camps</title>
         <link rel="stylesheet" href="style.css">
         <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
         <header>
-            <h1>KΘΠ-Nu Coding Camps</h1>
+            <h1 class="fratName mainTitle">KΘΠ-Nu</h1>
         </header>
+        <p class="codingCampLabel">-------- Coding Camps --------</p>
         <nav>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
-                <button type="button" class="navigationButton">Home</button>
+                <button type="button" class="leftButton">Home</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/resources.html">
-                <button type="button" class="navigationButton">Resources</button>
+                <button type="button" class="middleButton">Resources</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/class_sign-up.html">
-                <button type="button" class="navigationButton">Class Sign-Up</button>
+                <button type="button" class="middleButton">Class Sign-Up</button>
             </a>
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/tutoring.html">
-                <button type="button" class="navigationButton">Tutoring</button>
-            </a>
-            <a href="https://njclose.github.io/KTP-Nu-pledge-project-website/about_us.html">
-                <button type="button" class="navigationButton">About Us</button>
-            </a>
+                <button type="button" class="rightButton">Tutoring</button>
+            </a>  
         </nav>
 
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
-        <h1 class="pageTitle">Class Sign-Up</h1>
+
+        <h1 class="pageTitle">Class Sign-Up:</h1>
+
+        <h2 class="sectionTitle">When?</h2>
+        <p class="bodyText">Camps are at 6 PM and last around 2-3 hours. They will be hosted on Tuesdays of February and March.</p>
+
+        <h2 class="sectionTitle">Sign-Up Form:</h2>
         
+
+        <div align="center">
+            <iframe width=90% height=500px src="https://docs.google.com/forms/d/e/1FAIpQLSdQZJd6Fhw46ywX9wkd_FM230-dlBu0GlMcbAXsuXxy_HkD8Q/viewform?usp=sf_link
+            " title="google form to scedule yourself for a class"></iframe>
+        </div>
+        <p></p>
+
+        <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
+
+        <div class="aboutUs">
+            <h1>About Us:</h1>
+            <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
+            <br>
+        </div>
     </body>
 </html>
