--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
 
-        <h1 class="pageTitle">Home:</h1>
+        <h1 class="pageTitle">Home</h1>
 
         <h2 class="sectionTitle">What are the Camps?:</h2>
         <p class="bodyText">The KTP Coding Camp is a fun and short program designed to help CU students strengthen their coding skills and collaborate on real-world projects. Students can engage in hands-on workshops, learning new programming techniques and problem-solving strategies while building connections with peers passionate about tech. This camp is a great opportunity for both beginners and advanced coders to grow and develop in a supportive environment!</p>
