--- a/tutoring.html
+++ b/tutoring.html
@@ -29,6 +29,14 @@
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
         <h1 class="pageTitle">Tutoring</h1>
+        <h2 class="sectionTitle">Homework Help:</h2>
+        <p class="bodyText">Need a hand with coding homework? KTP members are here to help! Get support, tips, and guidance from experienced peers in a supportive community. Sign up for a session on Monday or Wednesday, and provide what course you’re taking!</p>
+        <h2 class="sectionTitle">Sign-Up Form:</h2>
+        <div align="center">
+            <iframe width=90% height=500px src="https://docs.google.com/forms/d/e/1FAIpQLSfJhSg3ftWthswYiieD771vUyI5vGWKk6R6nFrUerszwm6tyg/viewform?usp=sf_link" title="google form sign-up form"></iframe>
+        </div>
+        <p></p>
+
 
         <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
 
