--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
     <head>
         <title>KΘΠ-Nu Coding Camps</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="/images/ktp_image.jpg">
+        <link rel="icon" type="image/x-icon" href="../ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
