--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -31,7 +31,7 @@
 
         <h1 class="pageTitle">Class Sign-Up</h1>
 
-        <h2 class="sectionTitle">When?</h2>
+        <h2 class="sectionTitle">When?:</h2>
         <p class="bodyText">Camps are at 6 PM and last around 2-3 hours. They will be hosted on Tuesdays of February and March.</p>
 
         <h2 class="sectionTitle">Sign-Up Form:</h2>
