Finished most of About Us Section

--- a/resources.html
+++ b/resources.html
@@ -11,7 +11,7 @@
             <h1 class="fratName mainTitle">KΘΠ-Nu</h1>
         </header>
         <p class="codingCampLabel">-------- Coding Camps --------</p>
-        <nav>
+        <nav class="navHeaderButtons">
             <a href="https://njclose.github.io/KTP-Nu-pledge-project-website">
                 <button type="button" class="leftButton">Home</button>
             </a>
@@ -29,6 +29,11 @@
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
         <h1 class="pageTitle">Resources</h1>
+        <h2 class="sectionTitle">GitHub:</h2>
+        <div align="center">
+            <iframe width=90% height=500px src="https://github.com/njclose/KTP-Nu-pledge-project" title="github repository"></iframe>
+        </div>
+        <p></p>
         
 
         <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
@@ -36,6 +41,36 @@
         <div class="aboutUs">
             <h1>About Us:</h1>
             <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
+
+            <div class="aboutUsInfoContainer">
+                <div class="aboutUsInfo">
+                    <p>
+                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                    <span class="aboutUsNames"><b>Nicholas Close</b></span></p>
+                </div>
+
+
+                <div class="aboutUsInfo">
+                    <p>
+                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                    <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
+                </div>
+
+
+                <div class="aboutUsInfo">
+                    <p>
+                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                    <span class="aboutUsNames"><b>Aaron Duong</b></span></p>
+                </div>
+
+
+                <div class="aboutUsInfo">
+                    <p>
+                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                    <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
+                </div>
+            </div>
+            <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
             <br>
         </div>
     </body>
