Fixed Image Issues

--- a/resources.html
+++ b/resources.html
@@ -3,7 +3,7 @@
     <head>
         <title>KΘΠ-Nu Coding Camps</title>
         <link rel="stylesheet" href="style.css">
-        <link rel="icon" type="image/x-icon" href="../ktp_image.jpg">
+        <link rel="icon" type="image/x-icon" href="https://github.com/njclose/KTP-Nu-pledge-project-website/blob/main/images/ktp_image.jpg">
     </head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <body>
@@ -45,28 +45,28 @@
             <div class="aboutUsInfoContainer">
                 <div class="aboutUsInfo">
                     <p>
-                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/blob/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
                     <span class="aboutUsNames"><b>Nicholas Close</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
-                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/blob/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
                     <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
-                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/blob/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
                     <span class="aboutUsNames"><b>Aaron Duong</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
-                        <img height="%" width="90%" src="../images/nick's_photo.jpg" class="aboutUsPhotos"></img>
+                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/blob/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
                     <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
                 </div>
             </div>
