--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -59,7 +59,7 @@
 
                 <div class="aboutUsInfo">
                     <p>
-                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
+                        <img height= %" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
                     <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
                 </div>
 
