Fixed Instagram Link

--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -77,7 +77,7 @@
                     <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
                 </div>
             </div>
-            <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
+            <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.instagram.com/ktpboulder/"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
             <br>
         </div>
     </body>
