Resources Page Started & Reduced Image Sizes

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p class="bodyText">Learning to code unlocks a world of possibilities. It boosts your problem-solving skills, opens doors to exciting careers, and empowers you to create amazing things – from websites to games and beyond. So why not give it a shot?</p>
         
         <h2 class="sectionTitle">Languages Taught & Their Uses:</h2>
-        <p class="centeredText">
+        <div class="centeredText">
             <b>R:</b>
             <br>- Statistics: Data analysis and modeling
             <br>- Data visualization: Graphs and plots
@@ -59,7 +59,7 @@
             <br>- Game development: High-performance games
             <br>- Embedded systems: IoT, automotive
             <br>
-        </p>
+        </div>
         <br>
 
 
