--- a/resources.html
+++ b/resources.html
@@ -29,11 +29,41 @@
         <!-- ANYTHING ABOVE THIS POINT IS THE HEADER AND MUST BE THE SAME ON EVERY PAGE -->
 
         <h1 class="pageTitle">Resources</h1>
-        <h2 class="sectionTitle">GitHub:</h2>
-        <div align="center">
-            <iframe width=90% height=500px src="https://github.com/njclose/KTP-Nu-pledge-project" title="github repository"></iframe>
-        </div>
-        <p></p>
+
+        <h2 class="sectionTitle">GitHub Repository: <a href="https://github.com/njclose/KTP-Nu-pledge-project"><button id="repositoryLink">Link</button></a></h2>
+
+        <h2 class="sectionTitle">Coding with R:</h2>
+        <p align="center" class="bodyText"><b>Curriculum:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <p align="center" class="bodyText"><b><br>Slides:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <p><br></p>
+
+        <h2 class="sectionTitle">Coding with Python:</h2>
+        <p align="center" class="bodyText"><b>Curriculum:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <p align="center" class="bodyText"><b><br>Slides:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <p><br></p>
+
+        <h2 class="sectionTitle">Coding with Java:</h2>
+        <p align="center" class="bodyText"><b>Curriculum:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <p align="center" class="bodyText"><b><br>Slides:</b></p>
+        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <p><br></p>
+
+        <h2 class="sectionTitle">Coding with C++:</h2>
+        <p align="center" class="bodyText"><b>Curriculum:</b></p>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/C%2B%2B/C%2B%2B_Curriculum.md" download="KTP-Nu_C++_Curriculum"><button class="downloadButton">Download (.md)</button></a></div>
+        <p align="center" class="bodyText"><b><br>Slides:</b></p>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/C%2B%2B/Presentation/KTP%20Coding%20Workshop%20-%20C%2B%2B.pdf" download="KTP-Nu_Coding_Workshop_C++"><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/C%2B%2B/Presentation/KTP%20Coding%20Workshop%20-%20C%2B%2B.pptx" download="KTP-Nu_Coding_Workshop_C++"><button class="downloadButton">Download (.pptx)</button></a></div>
+        <p><br></p>
+        
         
 
         <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
