--- a/index.html
+++ b/index.html
@@ -73,28 +73,28 @@
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Nicholas Close</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Nicholas Close</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/aaron's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Aaron Duong</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Aaron Duong</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/linley's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Linley Denslow</b></span></p>
                 </div>
             </div>
             <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.instagram.com/ktpboulder/"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
