--- a/class_sign-up.html
+++ b/class_sign-up.html
@@ -45,7 +45,7 @@
 
         <!-- ANYTHING ABOVE THIS POINT IS THE ABOUT US SECTION AND MUST BE THE SAME ON EVERY PAGE -->
 
-        <div class="aboutUs">
+        div class="aboutUs">
             <h1>About Us:</h1>
             <p class="aboutUsText">We’re currently pledge members at Kappa Theta Pi, and are driven by the belief that technology can make a positive impact on the world. Our goal is to help our peers grow not just as a coder, but as a person who uses their skills to do good. Through collaboration, mentorship, and community, we strive to build a future where technology is used for meaningful and lasting change.</p>
 
@@ -53,28 +53,28 @@
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Nicholas Close</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Nicholas Close</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
-                        <img height= %" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
+                        <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
+                        <span><br></span><span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/aaron's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Aaron Duong</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Aaron Duong</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/linley's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Linley Denslow</b></span></p>
                 </div>
             </div>
             <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.instagram.com/ktpboulder/"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
