--- a/resources.html
+++ b/resources.html
@@ -30,33 +30,33 @@
 
         <h1 class="pageTitle">Resources</h1>
 
-        <h2 class="sectionTitle">GitHub Repository: <a href="https://github.com/njclose/KTP-Nu-pledge-project"><button id="repositoryLink">Link</button></a></h2>
+        <h2 class="sectionTitle">GitHub Repository: <a href="https://github.com/njclose/KTP-Nu-pledge-project"><button id="repositoryLink">Website Link</button></a></h2>
 
-        <h2 class="sectionTitle">Coding with R:</h2>
+        <h2 class="sectionTitle">R:</h2>
         <p align="center" class="bodyText"><b>Curriculum:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/R/R_Curriculum.md"><button class="downloadButton">Download (.md)</button></a></div>
         <p align="center" class="bodyText"><b><br>Slides:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
-        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/R/Presentation/KTP%20Coding%20Workshop%20-%20R.pdf" ><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/R/Presentation/KTP%20Coding%20Workshop%20-%20R.pptx"><button class="downloadButton">Download (.pptx)</button></a></div>
         <p><br></p>
 
-        <h2 class="sectionTitle">Coding with Python:</h2>
+        <h2 class="sectionTitle">Python:</h2>
         <p align="center" class="bodyText"><b>Curriculum:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Python/Python_Curriculum.md"><button class="downloadButton">Download (.md)</button></a></div>
         <p align="center" class="bodyText"><b><br>Slides:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
-        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Python/Presentation/KTP%20Coding%20Workshop%20-%20Python.pdf"><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Python/Presentation/KTP%20Coding%20Workshop%20-%20Python.pptx"><button class="downloadButton">Download (.pptx)</button></a></div>
         <p><br></p>
 
-        <h2 class="sectionTitle">Coding with Java:</h2>
+        <h2 class="sectionTitle">Java:</h2>
         <p align="center" class="bodyText"><b>Curriculum:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.md)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Java/Java_Curriculum.md"><button class="downloadButton">Download (.md)</button></a></div>
         <p align="center" class="bodyText"><b><br>Slides:</b></p>
-        <div align="center"><a class="bodyText" href="" download=""><button class="downloadButton">Download (.pdf)</button></a>
-        <a class="bodyText" href="" download=""><button class="downloadButton">Download (.pptx)</button></a></div>
+        <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Java/Presentation/KTP%20Coding%20Workshop%20-%20Java.pdf"><button class="downloadButton">Download (.pdf)</button></a>
+        <a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/Java/Presentation/KTP%20Coding%20Workshop%20-%20Java.pptx"><button class="downloadButton">Download (.pptx)</button></a></div>
         <p><br></p>
 
-        <h2 class="sectionTitle">Coding with C++:</h2>
+        <h2 class="sectionTitle">C++:</h2>
         <p align="center" class="bodyText"><b>Curriculum:</b></p>
         <div align="center"><a class="bodyText" href="https://github.com/njclose/KTP-Nu-pledge-project/blob/main/C%2B%2B/C%2B%2B_Curriculum.md" download="KTP-Nu_C++_Curriculum"><button class="downloadButton">Download (.md)</button></a></div>
         <p align="center" class="bodyText"><b><br>Slides:</b></p>
@@ -76,28 +76,28 @@
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/nick's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Nicholas Close</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Nicholas Close</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/shaela's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Shaela Rhodes</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/aaron's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Aaron Duong</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Aaron Duong</b></span></p>
                 </div>
 
 
                 <div class="aboutUsInfo">
                     <p>
                         <img height="%" width="90%" src="https://github.com/njclose/KTP-Nu-pledge-project-website/raw/main/images/linley's_photo.jpg" class="aboutUsPhotos"></img>
-                    <span class="aboutUsNames"><b>Linley Denslow</b></span></p>
+                        <span><br></span><span class="aboutUsNames"><b>Linley Denslow</b></span></p>
                 </div>
             </div>
             <p class="aboutUsText"><b>Kappa Theta Pi Fraternity - Nu Chapter: </b><a href="https://www.ktpboulder.com/index.html"><button type="button" class="ktpWebsiteButton">Website</button></a><a href="https://www.instagram.com/ktpboulder/"><button type="button" class="ktpWebsiteButton">Instagram</button></a></p>
